--- a/src/index.css
+++ b/src/index.css
@@ -46,3 +46,25 @@
   padding-top: 120%;
   transition: width 0.2s ease-out, padding-top 0.2s ease-out;
 }
+
+.animate-scroll {
+  view-timeline-name: --image;
+  view-timeline-axis: block;
+  animation-timeline: --image;
+  animation-name: scroll;
+  animation-range: entry 25% cover 30%;
+  animation-fill-mode: both;
+  animation-range: entry 25% cover 40%;
+}
+
+@keyframes scroll {
+  from {
+    opacity: 0;
+    scale: 25%;
+  }
+
+  to {
+    opacity: 1;
+    scale: 100%;
+  }
+}
