--- a/src/index.css
+++ b/src/index.css
@@ -68,3 +68,28 @@
     scale: 100%;
   }
 }
+
+.hamburger svg {
+  /* Define the transition for transforming the SVG */
+  transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line {
+  fill: none;
+  stroke: rgb(32, 32, 32);
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 3;
+  /* Define the transition for transforming the Stroke */
+  transition: stroke-dasharray 600ms cubic-bezier(0.4, 0, 0.2, 1),
+    stroke-dashoffset 600ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.line-top-bottom {
+  stroke-dasharray: 12 63;
+}
+
+.menu-active {
+  stroke-dasharray: 20 300;
+  stroke-dashoffset: -32.42;
+}
